--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -1342,21 +1342,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="スケジュール内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o8r-xX-9vX">
-                                <rect key="frame" x="25" y="481" width="334" height="20.5"/>
+                                <rect key="frame" x="25" y="501" width="334" height="21"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="20.5" id="wvD-Za-uF9"/>
+                                    <constraint firstAttribute="height" constant="21" id="tAc-vx-tu0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01月01日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzd-fU-QJm">
-                                <rect key="frame" x="16" y="404" width="166" height="55"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="166" id="4oc-j5-2Pr"/>
-                                    <constraint firstAttribute="height" constant="55" id="zKI-7n-NdT"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -1364,8 +1354,8 @@
                                 <rect key="frame" x="299" y="538" width="60" height="60"/>
                                 <color key="backgroundColor" red="1" green="0.57637232540000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="Gxh-4L-m3s"/>
-                                    <constraint firstAttribute="width" constant="60" id="uEX-LR-hx2"/>
+                                    <constraint firstAttribute="width" constant="60" id="Vau-Fy-7dh"/>
+                                    <constraint firstAttribute="height" constant="60" id="dAu-uD-XvU"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                 <state key="normal" title="+">
@@ -1376,29 +1366,36 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="332"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="332" id="Qd7-vM-FWa"/>
-                                    <constraint firstAttribute="width" constant="375" id="WMV-dZ-2iJ"/>
+                                    <constraint firstAttribute="width" constant="375" id="Woo-ja-GWQ"/>
+                                    <constraint firstAttribute="height" constant="332" id="YEQ-j7-VZI"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="01月01日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tzd-fU-QJm">
+                                <rect key="frame" x="25" y="426" width="219" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="fKY-P7-bbW"/>
+                                    <constraint firstAttribute="width" constant="219" id="mDH-75-Yx2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="29"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="tzd-fU-QJm" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="16" id="4GX-Fe-prf"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="5h7-Mg-mBX"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="6uv-VM-VgE"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="8fN-OI-dhR"/>
-                            <constraint firstItem="o8r-xX-9vX" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="KJj-53-w84"/>
-                            <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="22" id="N7D-1G-oZ5"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="o8r-xX-9vX" secondAttribute="trailing" constant="16" id="TTg-l9-scB"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="NZO-Ah-ZfC" secondAttribute="bottom" constant="20" id="YIM-8T-w6k"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="aUv-5Y-aYY"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="baN-pL-mmS"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="Rbj-66-l0O" secondAttribute="leading" id="efN-UR-VZe"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="NZO-Ah-ZfC" secondAttribute="trailing" constant="16" id="jK0-Od-d0R"/>
-                            <constraint firstAttribute="trailing" secondItem="A7h-Wh-92t" secondAttribute="trailing" id="nGP-10-Wnc"/>
-                            <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="tzd-fU-QJm" secondAttribute="trailing" constant="193" id="o2r-vZ-nUz"/>
-                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="wAJ-jb-p7U"/>
-                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="A7h-Wh-92t" secondAttribute="bottom" constant="8" id="xiI-Mf-Tfb"/>
+                            <constraint firstItem="o8r-xX-9vX" firstAttribute="top" secondItem="tzd-fU-QJm" secondAttribute="bottom" constant="16" id="09S-Qp-qyo"/>
+                            <constraint firstItem="tzd-fU-QJm" firstAttribute="top" secondItem="A7h-Wh-92t" secondAttribute="bottom" constant="30" id="1EK-qI-MDQ"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="77d-WQ-AQX"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="JwP-PJ-qC9"/>
+                            <constraint firstItem="X93-aB-kt4" firstAttribute="bottom" secondItem="NZO-Ah-ZfC" secondAttribute="bottom" constant="20" id="Jwi-KY-IJj"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="top" secondItem="X93-aB-kt4" secondAttribute="top" id="KCM-et-LP5"/>
+                            <constraint firstItem="tzd-fU-QJm" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="LjM-zB-bdA"/>
+                            <constraint firstItem="o8r-xX-9vX" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" constant="25" id="Pzr-HV-Hln"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="XGL-Ny-Iqy"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="trailing" secondItem="X93-aB-kt4" secondAttribute="trailing" id="clh-2s-bJm"/>
+                            <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="NZO-Ah-ZfC" secondAttribute="trailing" constant="16" id="epw-EF-Qyb"/>
+                            <constraint firstItem="X93-aB-kt4" firstAttribute="trailing" secondItem="o8r-xX-9vX" secondAttribute="trailing" constant="16" id="j7K-gF-fzO"/>
+                            <constraint firstItem="A7h-Wh-92t" firstAttribute="leading" secondItem="X93-aB-kt4" secondAttribute="leading" id="mNj-Nt-KxG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="X93-aB-kt4"/>
                     </view>
@@ -1414,7 +1411,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DeT-ao-66D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2301.5999999999999" y="296.40179910044981"/>
+            <point key="canvasLocation" x="1565.5999999999999" y="297.30134932533736"/>
         </scene>
         <!--スケジュール管理-->
         <scene sceneID="KrT-ei-MT9">
@@ -1503,7 +1500,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GVN-00-7bD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3052" y="297.30134932533736"/>
+            <point key="canvasLocation" x="2302" y="298"/>
         </scene>
         <!--Interval-->
         <scene sceneID="tEP-n9-znc">
@@ -1637,31 +1634,12 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="aiL-Mk-lTe" kind="relationship" relationship="rootViewController" id="6Jy-aM-Yol"/>
+                        <segue destination="vCU-YZ-b8a" kind="relationship" relationship="rootViewController" id="Lf0-7L-Bg5"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eWW-1p-3QT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="805.60000000000002" y="298.2008995502249"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="BuF-Yr-HUk">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aiL-Mk-lTe" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" id="f4T-bO-4r0"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CHP-lO-K0c">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="vCU-YZ-b8a" kind="relationship" relationship="rootViewController" id="zN2-PN-JQ1"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IpH-vp-MRo" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1565.5999999999999" y="297.30134932533736"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GVr-SR-P66">
