--- a/workOut/Base.lproj/Main.storyboard
+++ b/workOut/Base.lproj/Main.storyboard
@@ -1370,6 +1370,9 @@
                                 <state key="normal" title="+">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="thQ-pq-0zi" kind="show" id="yKx-7g-18k"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="A7h-Wh-92t" customClass="FSCalendar">
                                 <rect key="frame" x="0.0" y="64" width="375" height="332"/>
@@ -1433,77 +1436,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wQJ-9c-BkF">
-                                <rect key="frame" x="45" y="59" width="289" height="160"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="wQJ-9c-BkF">
+                                <rect key="frame" x="45" y="103" width="289" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="160" id="jb0-pN-X4O"/>
-                                    <constraint firstAttribute="width" constant="289" id="leV-R1-BJf"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WfX-ab-0id">
-                                <rect key="frame" x="0.0" y="252" width="375" height="216"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="216" id="CrP-II-SJS"/>
-                                    <constraint firstAttribute="width" constant="375" id="ae3-Z2-FQ9"/>
-                                </constraints>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WfX-ab-0id">
+                                <rect key="frame" x="0.0" y="203" width="375" height="216"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="569302927.04799998">
                                     <!--2019-01-16 03:42:07 +0000-->
                                 </date>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2019/01/01" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3OG-8Y-c0G">
-                                <rect key="frame" x="60" y="502" width="254" height="28"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="254" id="KxP-Pa-mt3"/>
-                                    <constraint firstAttribute="height" constant="28" id="Y6B-Br-Cl9"/>
-                                </constraints>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="2019/01/01" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3OG-8Y-c0G">
+                                <rect key="frame" x="60" y="453" width="255" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bWE-FB-IvW">
-                                <rect key="frame" x="140" y="617" width="94" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Bec-Q0-lrx"/>
-                                    <constraint firstAttribute="width" constant="94" id="TtV-vQ-gJb"/>
-                                </constraints>
-                                <state key="normal" title="戻る"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pc8-ac-urO">
-                                <rect key="frame" x="120" y="565" width="138" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="138" id="dCO-yE-c8P"/>
-                                    <constraint firstAttribute="height" constant="30" id="u3B-Rn-tFz"/>
-                                </constraints>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pc8-ac-urO">
+                                <rect key="frame" x="120" y="516" width="138" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="スケジュールに書く"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="WfX-ab-0id" firstAttribute="top" secondItem="wQJ-9c-BkF" secondAttribute="bottom" constant="33" id="2sn-TK-8R7"/>
-                            <constraint firstItem="pc8-ac-urO" firstAttribute="top" secondItem="3OG-8Y-c0G" secondAttribute="bottom" constant="35" id="5xf-Uw-zlx"/>
-                            <constraint firstItem="wQJ-9c-BkF" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="45" id="EOx-OE-M9b"/>
-                            <constraint firstItem="WfX-ab-0id" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" id="Eee-3U-Yhj"/>
-                            <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="wQJ-9c-BkF" secondAttribute="trailing" constant="41" id="HWn-FZ-gth"/>
-                            <constraint firstItem="WfX-ab-0id" firstAttribute="trailing" secondItem="n0U-vJ-pfS" secondAttribute="trailing" id="K1Q-GX-esD"/>
-                            <constraint firstItem="wQJ-9c-BkF" firstAttribute="top" secondItem="n0U-vJ-pfS" secondAttribute="top" constant="39" id="K8n-4P-oJR"/>
-                            <constraint firstItem="bWE-FB-IvW" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="140" id="OSv-PI-jFE"/>
-                            <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="bWE-FB-IvW" secondAttribute="trailing" constant="141" id="QuM-jL-qhG"/>
-                            <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="3OG-8Y-c0G" secondAttribute="trailing" constant="61" id="TWT-BN-Nal"/>
-                            <constraint firstItem="pc8-ac-urO" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="120" id="cEW-hc-zIA"/>
-                            <constraint firstItem="3OG-8Y-c0G" firstAttribute="top" secondItem="WfX-ab-0id" secondAttribute="bottom" constant="34" id="fwJ-j2-ya4"/>
-                            <constraint firstItem="n0U-vJ-pfS" firstAttribute="bottom" secondItem="bWE-FB-IvW" secondAttribute="bottom" constant="20" id="hHr-92-Nu9"/>
-                            <constraint firstItem="3OG-8Y-c0G" firstAttribute="leading" secondItem="n0U-vJ-pfS" secondAttribute="leading" constant="60" id="imV-OB-yfE"/>
-                            <constraint firstItem="n0U-vJ-pfS" firstAttribute="trailing" secondItem="pc8-ac-urO" secondAttribute="trailing" constant="117" id="tv9-PI-Gly"/>
-                            <constraint firstItem="bWE-FB-IvW" firstAttribute="top" secondItem="pc8-ac-urO" secondAttribute="bottom" constant="22" id="wgD-mB-vwZ"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="n0U-vJ-pfS"/>
                     </view>
                     <navigationItem key="navigationItem" title="スケジュール管理" id="M55-64-SVm"/>
                     <connections>
-                        <outlet property="backBtn" destination="bWE-FB-IvW" id="Ywn-Zd-CDv"/>
                         <outlet property="eventInsert" destination="pc8-ac-urO" id="d15-bE-o3h"/>
                         <outlet property="eventText" destination="wQJ-9c-BkF" id="JpG-nQ-jTg"/>
                         <outlet property="y" destination="WfX-ab-0id" id="zz2-qv-nyf"/>
@@ -1512,7 +1476,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GVN-00-7bD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2302" y="298"/>
+            <point key="canvasLocation" x="2301.5999999999999" y="297.30134932533736"/>
         </scene>
         <!--Interval-->
         <scene sceneID="tEP-n9-znc">
