--- a/workOut/Base.lproj/LaunchScreen.storyboard
+++ b/workOut/Base.lproj/LaunchScreen.storyboard
@@ -18,16 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="workout4.png" translatesAutoresizingMaskIntoConstraints="NO" id="8vM-qr-hUa">
-                                <rect key="frame" x="16" y="20" width="343" height="627"/>
-                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Work Out" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tij-uc-kpV">
+                                <rect key="frame" x="13.5" y="281" width="348.5" height="105.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="88"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="8vM-qr-hUa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Q5r-pz-sdl"/>
-                            <constraint firstItem="8vM-qr-hUa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="-16" id="dYy-9e-rA8"/>
-                            <constraint firstItem="8vM-qr-hUa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-20" id="wdA-gD-i63"/>
-                            <constraint firstItem="8vM-qr-hUa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xLC-d5-0OH"/>
+                            <constraint firstItem="tij-uc-kpV" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="8NZ-qq-86v"/>
+                            <constraint firstItem="tij-uc-kpV" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Bbj-0E-fWQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -37,7 +38,4 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="workout4.png" width="500" height="500"/>
-    </resources>
 </document>
